--- a/templates/explore.html
+++ b/templates/explore.html
@@ -65,7 +65,7 @@
       <p>{{blog.created_at}}</p>
 
       
-      <a href="/post/{{post.id}}" class="btn btn-sm">Read More</a>
+      <a href="{% url 'post' id=blog.id %}" class="btn btn-sm">Read More</a>
     </div>
     {% endfor %}
     
